add products to cart

--- a/index.html
+++ b/index.html
@@ -78,70 +78,12 @@
             <div class="order__wrap-title">
               <h2 class="order__title">Корзина</h2>
 
-              <span class="order__count">4</span>
+              <span class="order__count">0</span>
             </div>
 
             <div class="order__wrap-list">
               <ul class="order__list">
-                <li class="order__item">
-                  <img src="img/burger1.jpg" alt="Супер сырный" class="order__image">
 
-                  <div class="order__product">
-                    <h3 class="order__product-title">Супер сырный</h3>
-
-                    <p class="order__product-weight">512г</p>
-
-                    <p class="order__product-price">550₽</p>
-                  </div>
-
-                  <div class="order__product-count count">
-                    <button class="count__minus">-</button>
-
-                    <p class="count__amount">1</p>
-
-                    <button class="count__plus">+</button>
-                  </div>
-                </li>
-
-                <li class="order__item">
-                  <img src="img/free.jpg" alt="Картошка фри" class="order__image">
-
-                  <div class="order__product">
-                    <h3 class="order__product-title">Картошка фри</h3>
-
-                    <p class="order__product-weight">180г</p>
-
-                    <p class="order__product-price">245₽</p>
-                  </div>
-
-                  <div class="order__product-count count">
-                    <button class="count__minus">-</button>
-
-                    <p class="count__amount">2</p>
-
-                    <button class="count__plus">+</button>
-                  </div>
-                </li>
-
-                <li class="order__item">
-                  <img src="img/hot-dog1.jpg" alt="Жгучий хот-дог" class="order__image">
-
-                  <div class="order__product">
-                    <h3 class="order__product-title">Жгучий хот-дог</h3>
-
-                    <p class="order__product-weight">245г</p>
-
-                    <p class="order__product-price">239₽</p>
-                  </div>
-
-                  <div class="order__product-count count">
-                    <button class="count__minus">-</button>
-
-                    <p class="count__amount">1</p>
-
-                    <button class="count__plus">+</button>
-                  </div>
-                </li>
               </ul>
 
               <div class="order__total">
@@ -410,7 +352,7 @@
       </div>
     </div>
   </div>
-  <script src="./js/main.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
